# Data-processing

./: PLAN.md  pyproject.toml
artifacts/baseline_real_stack/reports/: result.json  summary.md
artifacts/flickr30k_image_flow/: image_flow_result.json  image_flow_summary.md
artifacts/reports/: result.json  summary.md
artifacts/tmp_homomorphic_check/reports/: result.json  summary.md
configs/experiments/: v1_baseline.yaml
scripts/: run_video_flow.py
src/mmhe_v1/: __init__.py  config.py  reporting.py  types.py  video_flow.py
src/mmhe_v1/canonicalize/: image.py  text.py  video.py
src/mmhe_v1/crypto/: ckks.py  similarity.py
src/mmhe_v1/data/: manifest.py  modality_records.py  variants.py
src/mmhe_v1/embedding/: chinese_clip_encoder.py  openclip_encoder.py  utils.py  video_action_encoder.py
src/mmhe_v1/experiments/: consistency.py  metrics.py  runner.py
src/mmhe_v1/hashing/: homomorphic.py  perceptual.py  semantic.py  strict.py
tests/: test_chinese_clip_encoder.py  test_config_chinese_video.py  test_video_action_encoder.py  test_video_flow.py
