[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmhe-v1"
version = "0.1.0"
description = "Local multimodal hashing and encryption experiment toolkit (v1)."
readme = "PLAN.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "ImageHash>=4.3",
    "open_clip_torch>=3.3.0",
    "tenseal>=0.3.16",
    "torch>=2.0",
    "transformers>=4.32",
    "numpy>=1.26",
    "opencv-python>=4.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
